; ModuleID = '/home/carl/AnghaBench/libui/common/extr_tablemodel.c_uiprivTableModelCellValue.c'
source_filename = "/home/carl/AnghaBench/libui/common/extr_tablemodel.c_uiprivTableModelCellValue.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32* (%struct.TYPE_4__*, i32*, i32, i32)* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @uiprivTableModelCellValue(i32* %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca %struct.TYPE_4__*, align 8
  store i32* %0, i32** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %8 = load i32*, i32** %4, align 8
  %9 = call %struct.TYPE_4__* @uiprivTableModelHandler(i32* %8)
  store %struct.TYPE_4__* %9, %struct.TYPE_4__** %7, align 8
  %10 = load %struct.TYPE_4__*, %struct.TYPE_4__** %7, align 8
  %11 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %10, i32 0, i32 0
  %12 = load i32* (%struct.TYPE_4__*, i32*, i32, i32)*, i32* (%struct.TYPE_4__*, i32*, i32, i32)** %11, align 8
  %13 = load %struct.TYPE_4__*, %struct.TYPE_4__** %7, align 8
  %14 = load i32*, i32** %4, align 8
  %15 = load i32, i32* %5, align 4
  %16 = load i32, i32* %6, align 4
  %17 = call i32* %12(%struct.TYPE_4__* %13, i32* %14, i32 %15, i32 %16)
  ret i32* %17
}

declare dso_local %struct.TYPE_4__* @uiprivTableModelHandler(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
